--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<a href="https://www.linkedin.com/in/shivansh-jaiswal/"><i class="fa fa-linkedin-square"></i></a>
 					</li>
 					<li>
-						<a href="https://github.com/cvanshj"><i class="fab fa-github"></i></a>
+						<a href="https://github.com/cvansh10"><i class="fab fa-github"></i></a>
 					</li>
 				</ul>
 			</div>
@@ -89,7 +89,7 @@
 					<div class="container">
 						<p class="text-warning text-uppercase" style="font-size: 50px;">Shivansh Jaiswal</p>
 						<p class="quote"><i class="fas fa-quote-left text-white"></i><span class="text-white" style="font-size: 30px; font-family: roboto; color: #f2f7f5!important">&nbsp; &nbsp; Imagine! Believe! Achieve!</span>&nbsp;&nbsp;<i class="fas fa-quote-right"></i></p>
-						<a href="https://github.com/cvanshj" class="btn btn-success btn-lg active" role="button" aria-pressed="true">Visit my GitHub <i class="fab fa-github"></i></a>
+						<a href="https://github.com/cvansh10" class="btn btn-success btn-lg active" role="button" aria-pressed="true">Visit my GitHub <i class="fab fa-github"></i></a>
 						<svg class="arrows">
 							<path class="a1" d="M0 0 L30 32 L60 0"></path>
 							<path class="a2" d="M0 20 L30 52 L60 20"></path>
@@ -111,16 +111,20 @@
 				<hr style="border: 1px solid #2B4C66;">
 				<div class="row pb-3 pb-md-5">
 					<div class="col-md-8">
-						<h2>Data Engineer</h2>
+						<h2>Consultant</h2>
 						<p>
-							I am working as Data Analyst at EXL Services in Analytics department. Alumni of Motilal Nehru National Institute of Technology (NIT Allahabad) <br><br>
-							Interested in Data Science, Web Analytics, Web Development, Machine Learning<br><br>
+							I am currently working as a Consultant at EXL (Gurgaon) in a client-facing analytics role. I specialize in analyzing large-scale datasets to deliver actionable insights as per client requirements. My core expertise lies in advanced SQL for data extraction and transformation, and I effectively present findings through Power BI dashboards and advanced Excel-based reporting.
+
+In addition to my business intelligence skills, I have hands-on experience with Python and supervised machine learning techniques. I have worked on end-to-end model development using platforms like Databricks—ranging from data preparation to model training and interpretation using algorithms such as linear regression.
+
+My career interest is deeply rooted in data science, and I am continuously exploring ways to build more robust, data-driven solutions. I am passionate about turning complex data into meaningful insights that drive business value. <br><br>
+							Interested in Data Science, Machine Learning<br><br>
 							Check out my projects <a href="#projects" style="color:blue;" ><u>portfolio</u></a> and <a href="#resume" style="color:blue;" ><u>resume</u></a>
 						</p>
 						<h2>Binance Merchant (⚒️Prince™)</h2>
 						<p>
-							I am verified Merchant in Binance, Alias ⚒️Prince™. With Average turnover of 5 LPM. <br><br>
-							If you are intrested, Do visit my Binance account and can place an order on my ads<br>
+							Verified Merchant in Binance, Alias ⚒️Prince™. Average turnover: 5 LPM. <br><br>
+							Intrested? Visit account and place an order on ads<br>
 							Check out my real time <a href="https://p2p.binance.com/en/advertiserDetail?advertiserNo=sfdffa80dae15340e8ced28eaf0318449" target="_blank" style="color:blue;"><u>Trades and Available ads</u></a>
 							<a href="https://p2p.binance.com/en/advertiserDetail?advertiserNo=sfdffa80dae15340e8ced28eaf0318449" target="blank"><button class="button button-block p-2 px-3 rounded">VISIT BINANCE ACCOUNT <img alt="instagram" width="30" height="30" src="https://user-images.githubusercontent.com/12424618/54043975-b6cdb800-4182-11e9-83bd-0cd2eb757c6e.png"></button></a>
 						</p>						
@@ -138,7 +142,7 @@
 								<b>Email: </b>ershivansh16@gmail.com
 							</li>
 							<li>
-								<b>Phone: </b>(+91)-8003575382
+								<b>Phone: </b>(+91)-8*******82 (Sign in to view)
 							</li>
 						</ul>
 						<a href="#resume"><button class="button button-block p-2 px-3 rounded">VIEW RESUME</button></a>
@@ -153,6 +157,8 @@
 					<li><img src="image/Tableau.png"></li>
 					<li><img src="image/PowerBI.png"></li>
 					<li><img src="image/adobe.png"></li>
+					<li><img src="image/sql.png"></li>
+					
 					
 				</ul>
 			</div>
@@ -183,6 +189,7 @@
 							<li>
 								<h4 class="text-uppercase">Computer languages</h4>
 								<ul style="list-style-type: none;">
+									<li class="pb-2">Advanced SQL</li>
 									<li class="pb-2">C Programming</li>
 									<li class="pb-2">Python</li>
 									<li class="pb-2">SAS Language</li>
@@ -220,6 +227,7 @@
 							<li>
 								<h4 class="text-uppercase">Tools</h4>
 								<ul style="list-style-type: none;">
+									<li class="pb-2">Advance Excel</li>
 									<li class="pb-2">Tableau</li>
 									<li class="pb-2">PowerBI</li>
 									<li class="pb-2">Adobe Analytics</li>
@@ -389,12 +397,12 @@
 							</tr>
 							<tr>
 								<td>
-									<a href="https://wa.me/+918003575382">
+									<a href="https://wa.me/+918299250632">
 										<i class="fa-whatsapp-square"></i>
 									</a>
 								</td>
 								<td>
-									<a href="https://wa.me/+918003575382">Whatsapp me</a>
+									<a href="https://wa.me/+918299250632">Whatsapp me</a>
 								</td>
 							</tr>
 							<tr>
