--- a/index.html
+++ b/index.html
@@ -113,12 +113,18 @@
 					<div class="col-md-8">
 						<h2>Consultant</h2>
 						<p>
-							I am currently working as a Consultant at EXL (Gurgaon) in a client-facing analytics role. I specialize in analyzing large-scale datasets to deliver actionable insights as per client requirements. My core expertise lies in advanced SQL for data extraction and transformation, and I effectively present findings through Power BI dashboards and advanced Excel-based reporting.
+							I am currently working as a Consultant at EXL (Gurgaon) in a client-facing analytics role.
+							I specialize in analyzing large-scale datasets to deliver actionable insights as per client requirements.
+							My core expertise lies in advanced SQL for data extraction and transformation, and I effectively present findings through Power BI dashboards 
+							and advanced Excel-based reporting.
 
-In addition to my business intelligence skills, I have hands-on experience with Python and supervised machine learning techniques. I have worked on end-to-end model development using platforms like Databricks—ranging from data preparation to model training and interpretation using algorithms such as linear regression.
-
-My career interest is deeply rooted in data science, and I am continuously exploring ways to build more robust, data-driven solutions. I am passionate about turning complex data into meaningful insights that drive business value. <br><br>
-							Interested in Data Science, Machine Learning<br><br>
+							<br><br>In addition to my business intelligence skills, I have hands-on experience with Python and supervised machine learning techniques. 
+							I have worked on end-to-end model development using platforms like Databricks—ranging from data preparation to model training and 
+							interpretation using algorithms such as linear regression <br><br>
+							<br><br>
+							My career interest is deeply rooted in data science, and I am continuously exploring ways to build more robust, data-driven solutions. 
+							I am passionate about turning complex data into meaningful insights that drive business value. 
+							<br><br>
 							Check out my projects <a href="#projects" style="color:blue;" ><u>portfolio</u></a> and <a href="#resume" style="color:blue;" ><u>resume</u></a>
 						</p>
 						<h2>Binance Merchant (⚒️Prince™)</h2>
