--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 					<li><img src="image/Tableau.png"></li>
 					<li><img src="image/PowerBI.png"></li>
 					<li><img src="image/adobe.png"></li>
-					<li><img src="image/sql.png"></li>
+					<li><img src="image/sql.jpg"></li>
 					
 					
 				</ul>
