--- a/index.html
+++ b/index.html
@@ -515,8 +515,19 @@
 
 }
 
+
+	</script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 			
-			
+	<!-- For number of views -->
+	<h1>This site has been visited <span id="visits"></span> times.</h1>	
+	
+	<script>		
+	function websiteVisits(response) {
+    		document.querySelector("#visits").textContent = response.value;
+	}		
+	</script>
 			
   </body>
 </html>
