--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<div class="container">
 						<p class="text-warning text-uppercase" style="font-size: 50px;">Shivansh Jaiswal</p>
 						<p class="quote"><i class="fas fa-quote-left text-white"></i><span class="text-white" style="font-size: 30px; font-family: roboto; color: #f2f7f5!important">&nbsp; &nbsp; Imagine! Believe! Achieve!</span>&nbsp;&nbsp;<i class="fas fa-quote-right"></i></p>
-						<a href="https://github.com/cvansh10" class="btn btn-success btn-lg active" role="button" aria-pressed="true">Visit my GitHub <i class="fab fa-github"></i></a>
+						<a href="http://www.fiverr.com/s/pdge8yE" class="btn btn-success btn-lg active" role="button" aria-pressed="true">Hire Me on Fiverr <i class="fab fa-github"></i></a>
 						<svg class="arrows">
 							<path class="a1" d="M0 0 L30 32 L60 0"></path>
 							<path class="a2" d="M0 20 L30 52 L60 20"></path>
